<resources>
    <string name="app_name">Happy Places</string>
    <string name="edit_text_hint_title">Title</string>
    <string name="edit_text_hint_description">Description</string>
    <string name="edit_text_hint_date">Date</string>
    <string name="edit_text_hint_location">Location</string>
    <string name="text_add_image">ADD IMAGE</string>
    <string name="btn_text_save">SAVE</string>
    <string name="add_image">Add image</string>
    <string name="no_happy_place">No Happy places</string>
    <string name="update_">Update</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_maps_api_key">AIzaSyBa2MaP3rNNT4FMIkEVUizAmBDew8saqic</string>
</resources>